<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context="com.jonassjoberg.chordprogression.SetupActivity">

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/setupActivityAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob_banner_id_main_activity"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">
    </com.google.android.gms.ads.AdView>

    <Button
        android:id="@+id/setupActivityButtonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/setup_start"
        style="@style/CustomButtonTheme"/>

    <ScrollView
        android:id="@+id/setupActivityScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/setupActivityButtonStart"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/setupActivityAdView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/setupActivitySpinnerKeyNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/setupActivitySpinnerKeyChordType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/setupActivitySpinnerTimeSignature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/setupActivityButtonSimple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/setup_option_simple"
                    style="@style/CustomButtonTheme"/>

                <Button
                    android:id="@+id/setupActivityButtonAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/setup_option_all"
                    style="@style/CustomButtonTheme"/>
            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/setupActivityLinearLayoutLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/setupActivityLinearLayoutRight"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Switch
                        android:id="@+id/setupActivitySwitchMajor"
                        style="@style/CustomSwitchTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="true"
                        android:text="@string/chord_type_major" />

                    <Switch
                        android:id="@+id/setupActivitySwitchMinor"
                        style="@style/CustomSwitchTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="true"
                        android:text="@string/chord_type_minor" />

                    <Switch
                        android:id="@+id/setupActivitySwitchMinor6"
                        style="@style/CustomSwitchTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_minor_6" />

                    <Switch
                        android:id="@+id/setupActivitySwitchMinor7"
                        style="@style/CustomSwitchTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_minor_7" />

                    <Switch
                        android:id="@+id/setupActivitySwitchMinor7b5"
                        style="@style/CustomSwitchTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_minor_7_b5" />

                    <Switch
                        android:id="@+id/setupActivitySwitchMinor9"
                        style="@style/CustomSwitchTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_minor_9" />

                    <Switch
                        android:id="@+id/setupActivitySwitchMaj7"
                        style="@style/CustomSwitchTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_maj_7" />

                    <Switch
                        android:id="@+id/setupActivitySwitchMaj9"
                        style="@style/CustomSwitchTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_maj_9" />

                    <Switch
                        android:id="@+id/setupActivitySwitchDim7"
                        style="@style/CustomSwitchTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_dim_7" />

                    <Switch
                        android:id="@+id/setupActivitySwitchDimSlashb3"
                        style="@style/CustomSwitchTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_dim_slash_b3" />

                    <Switch
                        android:id="@+id/setupActivitySwitchSus"
                        style="@style/CustomSwitchTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_sus" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/setupActivityLinearLayoutRight"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/setupActivityLinearLayoutLeft"
                    app:layout_constraintTop_toTopOf="parent">

                    <Switch
                        android:id="@+id/setupActivitySwitchSlash1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_slash_1"
                        style="@style/CustomSwitchTheme"/>

                    <Switch
                        android:id="@+id/setupActivitySwitchSlash2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_slash_2"
                        style="@style/CustomSwitchTheme"/>

                    <Switch
                        android:id="@+id/setupActivitySwitchSlash3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_slash_3"
                        style="@style/CustomSwitchTheme"/>

                    <Switch
                        android:id="@+id/setupActivitySwitchSlash5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_slash_5"
                        style="@style/CustomSwitchTheme"/>

                    <Switch
                        android:id="@+id/setupActivitySwitch2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_2"
                        style="@style/CustomSwitchTheme"/>

                    <Switch
                        android:id="@+id/setupActivitySwitch6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_6"
                        style="@style/CustomSwitchTheme"/>

                    <Switch
                        android:id="@+id/setupActivitySwitch7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="true"
                        android:text="@string/chord_type_7"
                        style="@style/CustomSwitchTheme"/>

                    <Switch
                        android:id="@+id/setupActivitySwitch9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_9"
                        style="@style/CustomSwitchTheme"/>

                    <Switch
                        android:id="@+id/setupActivitySwitchb9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_b9"
                        style="@style/CustomSwitchTheme"/>

                    <Switch
                        android:id="@+id/setupActivitySwitch11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_11"
                        style="@style/CustomSwitchTheme"/>

                    <Switch
                        android:id="@+id/setupActivitySwitch13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:checked="false"
                        android:text="@string/chord_type_13"
                        style="@style/CustomSwitchTheme"/>

                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

